--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-heroku==0.3.1
 django-rest-auth==0.9.3
 djangorestframework==3.9.3
 drf-dynamic-fields==0.3.1
+freeze==1.0.10
 gunicorn==19.9.0
 idna==2.8
 oauthlib==3.0.1
